update google and azure tutorials

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -1,6 +1,6 @@
 ---
 title: Microsoft Azure AD
-description: Learn how to integrate Microsoft Azure AD via SAML SSO.
+description: Learn how to integrate Microsoft Azure AD with Clerk using SAML SSO.
 ---
 
 # Microsoft Azure AD
@@ -12,7 +12,7 @@ description: Learn how to integrate Microsoft Azure AD via SAML SSO.
       link: "/docs/quickstarts/setup-clerk",
     },
     {
-      title: "Set up a local project",
+      title: "Add the appropriate Clerk SDK to your application",
       link: "/docs/quickstarts/overview",
     },
   ]}
@@ -22,160 +22,89 @@ description: Learn how to integrate Microsoft Azure AD via SAML SSO.
 
 </TutorialHero>
 
-Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
+Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
-<Callout type="info">
-  You must have a local project with Clerk set up already to follow this tutorial. See [the quickstart docs](/docs/quickstarts/overview) to get started.
-</Callout>
-
 <Steps>
 
-### Setup Clerk Enterprise Connection
+### Set up Enterprise Connection in Clerk
 
-1. Create a new Enterprise Connection in the Clerk Dashboard. 
-2. Fill out the form with the details for your Azure AD application.
+To create a SAML connection in Clerk,
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/azure-saml-clerk-create-connection.avif"
-  alt="Steps to create a new Enterprise Connection in the Clerk Dashboard and fill out the form with the details for your Azure AD application"
-/>
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the **Create connection** button.
+4. You will be presented with a modal to create a new connection. Fill in the required fields.
+- **Name** - A unique name for the connection. This is so you can tell your connections apart.
+- **Domain** - The email domain for which you will enable Enterprise SSO.
+- **Identity Provider** - The IdP you are using. For this tutorial, select **Microsoft Azure AD**.
+5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+6. Leave this page open. You will need to come back to it to complete the setup.
 
-### Find the Azure Enterprise Applications 
+### Create a new Enterprise Application in Azure
 
-Find the Azure "Enterprise Applications" in the Azure Portal to navigate to create a new application.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/azure-ad-ent-applications-location.avif"
-  alt="Find the Azure Enterprise Applications in the Azure Portal"
-/>
+To create a new Enterprise Application in Azure,
 
-###  Create a new Azure Enterprise Application
+1. Navigate to the [Azure Portal](https://azure.microsoft.com/en-us/get-started/azure-portal) and sign in.
+2. Under the **Azure Services** section, find and select **Enterprise Applications**. You may have to go to the [**All services**](https://portal.azure.com/#allservices) page and then scroll down to the **Identity* section to find it.
+3. Select the **New Application** button.
+4. Select the **Create your own application** button.
+5. Fill in the required fields and select the **Create** button.
 
-Find and click on the "New Application" button to create a new Enterprise Application.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/azure-new-app.avif"
-  alt="Create a new Azure Enterprise Application in the Azure Portal"
-/>
+### Assign selected user or group in Azure
 
-###  Find Add User or Group & Assign
+Now that you have created the Enterprise Application, you need to assign your users/user groups to it. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the Enterprise Application you just created.
 
-Find the "Add User or Group" button and click it.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/find-add-user.avif"
-  alt="Pointing to find the 'Add User or Group' button and click it"
-/>
+1. Under the **Getting started** section, select **Assign users and groups**.
+2. Select the **Add user/group** button.
+3. Under **Users**, select the **None Selected** link.
+4. In the search field, enter the user or group of users that you want to assign to the Enterprise Application.
+5. Select the check box next to the user or group that you want to assign.
+6. Select the **Select** button at the bottom of the page.
+7. Select the **Assign** button at the bottom of the page.
 
-#### Assign Selected User or Group
+### Configure single sign-on (SSO) in Azure
 
-1. Click on the "Users none selected" link.
-2. Enter in the search field the user or group you want to assign to the Enterprise Application.
-3. Click on the check box next to the user or group you want to assign.
-4. Click the "Select" button at the bottom of the page.
-5. Click the "Assign" button at the bottom of the page.
+After you have assigned the user or group of users to the Enterprise Application, you need to configure the single sign-on (SSO) settings to enable SAML SSO.
 
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/azure/assign-user-to-app.avif" 
-alt="Steps to assign User or Group to the Enterprise Azure Application" 
-/>
+1. In the navigation sidebar, select **Overview**.
+2. Under the *Getting started* section, select **Set up single sign-on**.
+3. Select **SAML** as the single sign-on method.
 
-### Find SSO Setup
+### Configure your service provider
 
-After you have assigned the user to the app, go to "Overview" in the left-hand menu.
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/find-sso-setup.avif"
-  alt="Pointing to find the SSO Setup in the Azure Portal in the Overview section"
-/>
+To configure your service provider (Clerk), you will need to add these two fields to your IdP's application:
 
-Choose the "SAML" option.
+- **Reply URL (Assertion Consumer Service URL)** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **Identifier (Entity ID)** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
 
-### Basic SAML Configuration
-1. Find and click on the edit button for the Basic SAML Configuration.
-2. Copy the "Identifier (Entity ID)" from the Clerk Dashboard and paste it into this field.
-3. Copy the "Reply URL (Assertion Consumer Service URL)" from the Clerk Dashboard and paste it into this field.
-Once those fields are filled out, click "Save" at the top of the page.
+1. On the **Set up Single Sign-On with SAML** page, you will see the **Basic SAML Configuration** section. Select the **Edit** button. This will open a **Basic SAML Configuration** modal.
+2. Go back to the Clerk Dashboard and scroll down to the **Service Provider configuration** section.
+3. Copy the **Identifier (Entity ID)** and the **Reply URL (Assertion Consumer Service URL)**.
+4. In the Azure Portal, in the **Basic SAML Configuration** modal, paste the **Identifier (Entity ID)** and the **Reply URL (Assertion Consumer Service URL)** into the corresponding fields.
+5. Select **Save** at the top of the modal.
 
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/azure/azure-basic-saml-configuration.avif" 
-alt="Steps to configure the Basic SAML Configuration in the Azure Portal" 
-/>
+### Configure your identity provider
 
-#### Clerk Reference for Basic SAML Configuration
-Step 2 for Indentifer (Entity ID) and Step 3 for Reply URL (Assertion Consumer Service URL) are the values you will need to copy from the Clerk Dashboard and paste into the Azure Portal.
-The numbers are directly related to Azure Portal's Basic SAML Configuration steps above. 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/clerk-side-azure-basic-saml-config.avif"
-  alt="Clerk Reference for Basic SAML Configuration in the Azure Portal"
-/>
+1. On the **Set up Single Sign-On with SAML** page, find the **SAML Certificates** section.
+2. Copy the **App Federation Metadata Url**.
+3. In the Clerk Dashboard, find the **Identity Provider configuration** section.
+4. Under the **Metadata configuration** option, paste the **App Federation Metadata Url**.
 
-### Add Azure Federation Metadata URL to Clerk IDP Metadata
+### Map Azure claims to Clerk attributes
 
-Azure Federation Metadata URL location in the Azure Portal
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/federation-url-azure-side.avif"
-  alt="Azure Federation Metadata URL location in the Azure Portal"
-/>
+1. On the **Set up Single Sign-On with SAML** page, find the **Attributes & Claims** section.
+2. Select the **Edit** button.
+3. Select the email address claim (`http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress`) to edit the field.
+4. Next to **Source attribute**, select the dropdown and choose `user.userprincipalname`.
+5. Select **Save** at the top of the page.
 
-Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dashboard
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/federation-url-clerk-side.avif"
-  alt="Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dashboard"
-/>
+### Enable the connection for Clerk
 
-### Mapping the Azure Claims to Clerk 
+To make the connection available for your users to authenticate with,
 
-Find the edit button for Claims "Attributes & Claims" in the Azure Portal.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/find-edit-attributes-claims.avif"
-  alt="Mapping the Azure Claims to Clerk in the Azure Portal"
-/>
-
-Click on the email claim to edit the field. 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/click-email-claim-to-edit.avif"
-  alt="Click on the email claim to edit the field in the Azure Portal"
-/>
-
-Update the email claim to "user.userprincipalname" and click "Save" at the top of the page.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/mail-to-user-userprinciplename.avif"
-  alt="Update the email claim to 'user.userprincipalname' and click 'Save' at the top of the page in the Azure Portal"
-/>
-
-### Enable the Connection in Clerk Dashboard
-
-After you have completed the steps in the Azure Portal, go back to the Clerk Dashboard and enable the connection.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/azure/enable-connection-clerk.avif"
-  alt="Enable the connection in the Clerk Dashboard"
-/>
+1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
+2. Toggle on the **Enable connection** option.
 
 </Steps>
