--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -1,6 +1,6 @@
 ---
 title: Google Workspace
-description: Learn how to integrate Google Workspace via SAML SSO.
+description: Learn how to integrate Google Workspace with Clerk using SAML SSO.
 ---
 
 # Google Workspace
@@ -12,7 +12,7 @@ description: Learn how to integrate Google Workspace via SAML SSO.
       link: "/docs/quickstarts/setup-clerk",
     },
     {
-      title: "Set up a local project",
+      title: "Add the appropriate Clerk SDK to your application",
       link: "/docs/quickstarts/overview",
     },
   ]}
@@ -22,134 +22,122 @@ description: Learn how to integrate Google Workspace via SAML SSO.
 
 </TutorialHero>
 
-Integrating Google Workspace with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO. This tutorial will guide you through the process of setting up Google SAML and integrating it with Clerk.
+Integrating Google Workspace with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
-<Callout type="info">
-  You must have a local project with Clerk set up already to follow this tutorial. See [the quickstart docs](/docs/quickstarts/overview) to get started.
-</Callout>
-
-
 <Steps>
 
-### Setup Clerk Enterprise Connection
-1. Create a new Enterprise Connection in the Clerk Dashboard. 
-2. Fill out the form with the details for your Google Application.
+### Set up Enterprise Connection in Clerk
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt="Create a new Enterprise Connection in the Clerk Dashboard"
-/>
+To create a SAML connection in Clerk,
 
-### Find the Google Enterprise Applications 
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the **Create connection** button.
+4. You will be presented with a modal to create a new connection. Fill in the required fields.
+- **Name** - A unique name for the connection. This is so you can tell your connections apart.
+- **Domain** - The email domain for which you will enable Enterprise SSO.
+- **Identity Provider** - The IdP you are using. For this tutorial, select **Google Workspace**.
+5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+6. Leave this page open. You will need to come back to it to complete the setup.
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+### Create a new Enterprise Application in Google
 
-###  Create a new Google Enterprise Application
+To create a new Enterprise Application in Google,
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+1. Navigate to the [Google Admin Console](https://admin.google.com/) and sign in.
+2. In the navigation sidebar, under **Apps**, select **Web and mobile apps**.
+3. Select the **Add app** button.
+4. From the dropdown, select **Add custom SAML app**.
+5. In the **App details** section, an **App name** is required. You can also add an **App description** and upload an **App icon** if you wish.
+6. Select the **Continue** button.
 
+### Configure your identity provider
 
-#### Follow the Google SAML Setup Wizard
+There are two options for configuring your IdP:
 
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/.avif" 
-/>
+- [**Metadata configuration**](#metadata-configuration) - This is where you can input the URL to your IdP's metadata file. This is the recommended way to configure your IdP.
+- [**Custom configuration**](#custom-configuration) - This is where you can manually input the configuration settings for your IdP.
 
+#### Metadata configuration
 
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/.avif" 
-/>
+1. In the Google Admin Console, under **Option 1: Download IdP Metadata**, select the **Download Metadata** button.
+2. In the Clerk Dashboard, find the **Identity Provider configuration** section.
+3. Under the **Metadata configuration** option, select the **Upload** button.
+4. Upload the metadata file you downloaded from Google.
 
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/.avif" 
-/>
+#### Custom configuration
 
-SAML Configuration in Google 
+If you choose to manually input the configuration settings for your IdP, you will need to add these three fields to your Clerk settings:
 
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+- **SSO URL** - This is the unique identifier of your IdP application.
+- **Entity ID** - This is your IdP's URL that Clerk will redirect your users to so that they can authenticate.
+- **Certificate** - This is the certificate needed for Clerk to securely connect to your IdP.
 
-#### Clerk Reference for SAML Settings
+1. In the Google Admin Console, under **Option 2**, copy the **SSO URL**, **Entity ID**, and download the **Certificate**.
+2. In the Clerk Dashboard, find the **Identity Provider configuration** section.
+3. Select the **Custom configuration** option.
+4. Fill in the **SSO URL**, **Entity ID**, and upload the **Certificate**.
+5. Select the **Save** button in the Clerk Dashboard.
+6. Select the **Continue** button in the Google Admin Console.
 
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+### Configure your service provider
 
-### Attribute Mapping in Google to Clerk 
+To configure your service provider (Clerk), you will need to add these three fields to your IdP's application:
 
-You will want to add the following fields to the attribute mapping in Google to Clerk.
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/.avif"
-alt="Attribute Mapping in Google to Clerk" 
-/>
+- **ACS URL** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **Entity ID** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+- **Metadata URL** - This is the URL to your SAML connection's metadata file. This is the recommended way to configure your SP.
 
+1. In the Clerk Dashboard, find the **Service Provider configuration** section.
+2. Copy the **ACS URL** and **Entity ID**.
+3. In the Google Admin Console, paste the **ACS URL** and **Entity ID**.
+4. Under the **Name ID** section, select the dropdown for **Name ID format** and select **Email**.
 
+### Map Google claims to Clerk attributes
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+Mapping the claims in your IdP to the attributes in Clerk ensures that the data from your IdP is correctly mapped to the data in Clerk.
 
-### Google PEM Certificate Download & Upload to Clerk
+The only Google claim that is necessary to map is the **Primary email**. This is the email address that your users will use to log in to your application.
 
-Download the PEM certificate from Google.
+1. In the Google Admin Console, under the **Attributes** section, select the dropdown under **Google Directory attributes**.
+2. Select **Primary email**.
+3. Select the dropdown under **App attributes**.
+4. Enter `mail` in the field.
+5. If you have additional claims that you would like to map to Clerk, you can do so by following the steps in the [Map other claims](#map-other-claims-optional) section. Otherwise, select the **Finish** button.
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+#### Map other claims (optional)
 
-Upload the PEM certificate to Clerk.
+In Clerk, the [`User`](/docs/users/overview#user-object) object has a `publicMetadata` property that you can use to store additional information about your users.
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt=""
-/>
+To map other claims from Google that don't have a direct mapping to Clerk attributes, you can map them to the `publicMetadata` property. To do this, prepend the Clerk claims with `public_metadata_` during the mapping process.
 
+For example, say your users have the "Phone number" attribute in Google. You can map this to your users' public metadata in Clerk by mapping the Google field to `public_metadata_phone_number`.
 
-### Enable the Connection in Clerk Dashboard
+1. In the Google Admin Console, under the **Attributes** section, select the dropdown under **Google Directory attributes**.
+2. Select **Phone number**.
+3. Select the empty input under **App attributes**.
+4. Enter `public_metadata_phone_number` in the field.
+5. Select the **Finish** button.
 
-Once you have pasted the Google Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/.avif"
-  alt="Enable the connection in the Clerk Dashboard"
-/>
+The value for the user's phone number will be saved in the user's `User.publicMetadata` under the key `phone_number`.
+
+[Learn more about how to access the metadata from our APIs.](https://clerk.com/docs/users/metadata)
+
+### Enable the connection for Google
+
+Once the configuration is complete, you will be redirected to the app details page.
+
+1. In the **User access** section, select **View details**.
+2. In the **Service status** section, select **ON for everyone**.
+3. Select the **Save** button.
+
+### Enable the connection for Clerk
+
+To make the connection available for your users to authenticate with,
+
+1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
+2. Toggle on the **Enable connection** option.
 
 </Steps>
