--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -5,7 +5,9 @@ description: Clerk supports Enterprise SSO via the SAML protocol so that you can
 
 # SAML
 
-Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for an Identity Provider (IdP). Currently, Clerk supports the following IdPs for Enterprise SSO:
+Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdPs credentials and have their user data synchronized with Clerk.
+
+Currently, Clerk supports the following IdPs for Enterprise SSO:
 
 - [Microsoft Azure AD](https://learn.microsoft.com/en-us/entra/fundamentals/whatis)
 - [Google Workspace](https://workspace.google.com/)
@@ -21,6 +23,7 @@ Clerk supports Enterprise SSO via the SAML protocol so that you can create authe
 During SAML SSO and after a user has successfully authenticated, the IdP provides Clerk with the corresponding user data. After each successful sign in, Clerk handles keeping the user data up-to-date based on the response of the SAML provider. This means that if a user's data changes on the IdP side, Clerk will automatically update the user's data in the Clerk database.
 
 To disable this behavior,
+
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 3. Select the SAML connection you want to disable the sync for.
@@ -32,6 +35,7 @@ To disable this behavior,
 Authenticating via SAML SSO requires the user's email address domain to match the exact domain the SAML connection has been configured with. By default, subdomains are not supported. For example, a user with the email address `john@sales.example.com` would not be able to use a SAML connection with the `example.com` domain in order to authenticate.
 
 To support SAML SSO with subdomains,
+
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 3. Select the SAML connection you want to disable the sync for.
@@ -44,34 +48,34 @@ To support SAML SSO with subdomains,
 
 ## Frequently asked questions (FAQ)
 
-**I've enabled other strategies but they don't work.**
+### I've enabled other strategies but they don't work
 
 A Clerk application can have multiple authentication strategies, but a domain that enables Enterprise SSO can not. Once Enterprise SSO is enabled for a domain, there can be no other authentication methods for that specific domain. This is in line with an organization's intent to manage their users' identity from one place. This will allow your Clerk application to enable Enterprise SSO connections for certain domains while others use non-Enterprise SSO methods depending on each organization's needs.
 
-**Will SAML work for my existing users?**
+### Will SAML work for my existing users?
 
-Yes, SAML will work for your existing users as well! That means, that if you enable SAML, any existing users that their email address matches the SAML Connection domain, they will have to authenticate on the IdP side and an Enterprise Account will be linked to their existing account.
+Yes, SAML will work for your existing users as well! If you enable SAML, any existing users with an email address that matches the SAML Connection domain will have to authenticate on the IdP side and an Enterprise Account will be linked to their existing account.
 
-**What happens if I have multi-factor enabled at Clerk?**
+### What happens if I have multi-factor enabled at Clerk?
 
 This will work: Once the user comes back from the IdP, they will need to go through the extra factors of authentication. This is in case you need to add extra factors on top of what your IdP supports (or in case they don't). You can choose to not enable this feature if you wish.
 
-**What happens if I delete the SAML connection? Will my users be deleted?**
+### What happens if I delete the SAML connection? Will my users be deleted?
 
 The users will not be deleted, so your application will not break. However, they will need to “reintroduce” themselves to your new strategies by resetting their passwords or via OTP (depending on the strategy you choose).
 
-**Does Clerk support IdP-initiated SSO?**
+### Does Clerk support IdP-initiated SSO?
 
 No, Clerk only supports SP-initiated flows at this time.
 
-**How much does it cost now?**
+### How much does it cost now?
 
-It's going to be free during the Beta period.
+It's going to be free during the Beta period for production instances. Connections in development instances will always be free, but capped to 5.
 
-**How much will it cost after Beta?**
+### How much will it cost after Beta?
 
-It will cost $50 per active connection per month for production instances. Connections in development instances are and will be free, but capped to 5.
+It will cost $50 per active connection per month for production instances. Connections in development instances will always be free, but capped to 5.
 
-**Can I get a bulk discount?**
+### Can I get a bulk discount?
 
 Yes, [reach out to us](https://clerk.com/support) and we will work a plan out.
