Update Firebase quickstart
A user has reported an error, and others have asked for examples writing data to the database and generally using firestore

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -5,7 +5,7 @@ description: Learn how to integrate Clerk into your Firebase application.
 
 # Integrate Firebase with Clerk
 
-To enable Firebase integration with your Clerk application, you will need to provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
+To enable Firebase integration with your Clerk application, you must provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
 
 To get started, go to the Clerk Dashboard and navigate to the **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)** page. Turn on the Firebase integration.
 
